Fix spacing between Adventures

--- a/art.css
+++ b/art.css
@@ -177,14 +177,14 @@
   padding: 20px;
 }
  */
-
-#iceland > p {
-  margin-right: 60px;
+#iceland, #rome{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 0 20px;
 }
 
-#rome >p {
-  margin-right: 60px;
-}
+
 
 .box #iceland1 {
   width: 270px;
@@ -306,23 +306,24 @@ h3 {
 }
 
 .hover_image {
-  display: block;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
 }
 
 .hover_image > img {
   width: 400px;
   height: 250px;
+
+
 }
 
 .hover_image > a {
-  display: block;
   position: absolute;
-  text-align: center;
   max-width: 50%;
-  top: 100px;
-  left: 18%;
-  font-family: 'oswald';
+  font-family: 'Oswald';
   letter-spacing: .1em;
   border: 1px solid white;
   box-shadow: 0 0 5px #fff;
